# slogsdon.com

./: .gitignore  .travis.yml  404.html  404.md  BingSiteAuth.xml  CNAME  Gemfile  LICENSE  Procfile  README.md  _config.yml  about.html  about.md  archive.html  blog.cabal  bsconfig.json  build.sh  composer.json  config.js  contact.md  deploy.sh  docker-compose.yml  feed.xml  gatsby-config.js  gatsby-node.js  gulpfile.js  html-minifier.json  humans.txt  index.html  index.js  index.md  make-tags.rkt  netlify.toml  next.config.js  package-lock.json  package.json  pollen.rkt  posts.html  posts.md  presentations.md  (+17 more)
_data/: authors.yml  projects.json  projects.yml  repositories.yml
_drafts/: 2013-10-30-implementing-user-authentication-with-bcrypt-in-chicagoboss.md  2013-11-22-get-awesome-with-list-nov-2013.md  2013-12-08-writing-api-wrappers-with-elixir.md
_includes/: brief-personal-info.html  classify-elements.html  footer.html  google-analytics.html  head.html  header.html  main.critical.css  main.scss  post-listing.html  presentation-listing.html  project-listing.html  seo.html
_layouts/: bare.html  base.html  compress.html  contact.html  default.html  home.html  main.html  page.html  post.html  tag-archive.html  talk.html
_posts/: 2013-04-14-installing-nginx-percona-php-fpm-with-homebrew-on-mountain-lion.md  2013-04-19-linux-and-net-should-be-friends.md  2013-08-06-migrating-from-mysql-server-to-percona-server.md  2013-08-06-using-obtvse2.md  2013-08-07-vagrant-is-awesome.md  2013-08-10-vagrant-is-awesome.md  2013-08-15-im-already-tired-of-rails-already.md  (+15 more)
(+693 files in other folders)
