name:               blog
version:            0.1.0.0
synopsis:           Blog for Shane Logsdon
description:        Blog for Shane Logsdon
homepage:           https://github.com/slogsdon/slogsdon.com
license:            MIT
license-file:       LICENSE
author:             Shane Logsdon
maintainer:         shane@shanelogsdon.com
-- copyright:
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  build-depends:    base
                  , hakyll
                  , directory
                  , filepath
                  , process
  ghc-options:      -threaded
  hs-source-dirs:   src
  default-language: Haskell2010
